--- a/styles/main.css
+++ b/styles/main.css
@@ -94,10 +94,102 @@ The designs were created to the following widths:
     margin-bottom: 30px;
 }
 
+.tip-btn{
+    margin-top: 10px;
+    height: 50px;
+    width: 150px;
+    background-color: var(--very-dark-cyan);
+    color: var(--White);
+    font-weight: 700;
+    font-size: 20px;
+    font-family: 'Space Mono', monospace;
+    border-radius: 5px;
+    border: 1px solid var(--very-dark-cyan);
+}
 
+.input-custom{
+    margin-top: 10px;
+    height: 50px;
+    width: 145px;
+    background-color: var(--light-grayish-cyan2);
+    color: var(--White);
+    font-weight: 700;
+    font-size: 20px;
+    font-family: 'Space Mono', monospace;
+    border-radius: 5px;
+    border: 1px solid var(--light-grayish-cyan2);
+}
+
+.calculator ::placeholder {
+    color: var(--very-dark-cyan);
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Space Mono', monospace;;
+}
+
+.tip ::placeholder {
+    color: var(--dark-grayish-cyan1);
+}
 
 /*preview part*/
 .preview{
-    padding: 10px;
+    border-radius: 12px;
+    padding: 20px;
     background-color: var(--very-dark-cyan);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.tip-amount, .total-bill{
+    color: var(--White);
+    margin-bottom: 10px;
+    font-weight: 600;
+}
+
+.person{
+    grid-column-start: 1;
+    color: var(--dark-grayish-cyan1);
+    font-weight: 700;
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+
+.dollar-input{
+    display: flex;
+    flex-direction: row;
+}
+
+.img-prevw{
+    color: var(--strong-cyan);
+}
+
+.input-preview{
+    background-color: var(--very-dark-cyan);
+    border: none;
+    width: 100px;
+}
+
+.total-bill{
+    grid-column-start: 1;
+}
+
+.reset-btn{
+    color: var(--White);
+    background-color: var(--strong-cyan);
+    grid-column-start: 1;
+    grid-column-end: 3;
+    border: 1px solid var(--strong-cyan);
+    height: 50px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 20px;
+    color: var(--very-dark-cyan);
+}
+
+.preview ::placeholder{
+    color: var(--strong-cyan);
+    font-size: 20px;
+    font-weight: 700;
 }
