--- a/styles/main.css
+++ b/styles/main.css
@@ -47,6 +47,9 @@
     width: 90%;
     height: 40px;
     text-align: right;
+    color: var(--very-dark-cyan);
+    font-size: 20px;
+    font-weight: 700;
 }
 
 .tip{
