--- a/styles/main.css
+++ b/styles/main.css
@@ -86,6 +86,16 @@
     border: 1px solid var(--light-grayish-cyan2);
 }
 
+.mb{
+    margin-bottom: 0;
+    text-align: right;
+}
+
+.err-message{
+    color: red;
+    font-size: 12px;
+}
+
 .calculator ::placeholder {
     color: var(--very-dark-cyan);
     font-size: 20px;
@@ -105,6 +115,7 @@
 
 /*preview part*/
 .preview{
+    margin-top: 20px;
     border-radius: 12px;
     padding: 20px;
     background-color: var(--very-dark-cyan);
@@ -177,7 +188,7 @@
 
     .img-input-div{
         margin-right: 7px;
-    }
+    }    
 
     .tipBtn{
         width: 95px;
@@ -196,7 +207,7 @@
 
     .tip{
         grid-template-columns: repeat(3, 1fr);
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
 
     .footer{
